--- a/app/views/exclusion/SearchResults.scala.html
+++ b/app/views/exclusion/SearchResults.scala.html
@@ -32,6 +32,7 @@ repeatWithIndex: RepeatWithIndex)
 @(taxYearRange: TaxYearRange,
   year: String,
   iabdType: String,
+  listOfMatches: EiLPersonList,
   listOfMatchesForm: Form[(String,EiLPersonList)],
   formType: String,
   empRef: EmpRef)(implicit request: Request[_], messages: Messages)
