[DP] Test progress 2

--- a/app/views/registration/ConfirmUpdateNextTaxYear.scala.html
+++ b/app/views/registration/ConfirmUpdateNextTaxYear.scala.html
@@ -33,6 +33,7 @@ uriInformation: URIInformation,
 back_link: BackLink)
 
 @(bikList: RegistrationList,
+  removalBik: Option[RegistrationItem],
   bikForm: Form[RegistrationList],
   additive: Boolean,
   taxYearRange:TaxYearRange, empRef: EmpRef)(implicit request:Request[_], flash: Flash, messages: Messages)
