[DP][DDCE-896]: Merging commits

--- a/app/assets/stylesheets/pbik.scss
+++ b/app/assets/stylesheets/pbik.scss
@@ -1,7 +1,7 @@
 @import '_ie7.scss';
 @import '_urBanner.scss';
 
-#link-back, #link-exlusion-back, #multi-exlusion-back {
+#link-back, #link-exclusion-back, #multi-exclusion-back {
     display: block;
     margin-top: 3em;
 }
