--- a/app/views/exclusion/ExclusionNinoOrNoNinoForm.scala.html
+++ b/app/views/exclusion/ExclusionNinoOrNoNinoForm.scala.html
@@ -104,7 +104,7 @@ back_link: BackLink)
             }
 
             <p>
-                <a class="button-link" id="link-exlusion-back" onclick="gaEvent('Click back to exclusion overview','From: Nino/No-nino form')"
+                <a class="button-link" id="link-exclusion-back" onclick="gaEvent('Click back to exclusion overview','From: Nino/No-nino form')"
                 href="@routes.ExclusionListController.performPageLoad(isCurrentTaxYear,uriInformation.iabdValueURLMapper(iabdType))">
                     @messages("Service.back.excluded")
                 </a>
