--- a/app/views/exclusion/NinoExclusionSearchForm.scala.html
+++ b/app/views/exclusion/NinoExclusionSearchForm.scala.html
@@ -116,7 +116,7 @@ input: TextInput)
         <input type="submit" class="button" role="button" id="button-search" value="@messages("Service.continue")"
 
         <p>
-            <a class="button-link" id="link-exlusion-back" onclick="gaEvent('Click back to exclusion overview','From: Nino search form')"
+            <a class="button-link" id="link-exclusion-back" onclick="gaEvent('Click back to exclusion overview','From: Nino search form')"
               href="@routes.ExclusionListController.performPageLoad(isCurrentTaxYear,uriInformation.iabdValueURLMapper(iabdType))">
                 @messages("Service.back.excluded")
             </a>
