--- a/app/views/exclusion/NoNinoExclusionSearchForm.scala.html
+++ b/app/views/exclusion/NoNinoExclusionSearchForm.scala.html
@@ -161,7 +161,7 @@ radioInput: InputRadioGroup)
             <input type="submit" class="button" role="button" id="button-search" value="@messages("Service.continue")">
 
             <p>
-                <a class="button-link" id="link-exlusion-back"  onclick="gaEvent('Click back to exclusion overview','From: No-nino search form')"
+                <a class="button-link" id="link-exclusion-back"  onclick="gaEvent('Click back to exclusion overview','From: No-nino search form')"
                 href="@routes.ExclusionListController.performPageLoad(isCurrentTaxYear,uriInformation.iabdValueURLMapper(iabdType))">
                     @messages("Service.back.excluded")
                 </a>
