--- a/app/views/registration/ConfirmUpdateNextTaxYear.scala.html
+++ b/app/views/registration/ConfirmUpdateNextTaxYear.scala.html
@@ -34,14 +34,13 @@ back_link: BackLink)
 
 @(bikList: RegistrationList,
   removalBik: Option[RegistrationItem],
-  bikForm: Form[RegistrationList],
   additive: Boolean,
   taxYearRange:TaxYearRange, empRef: EmpRef)(implicit request:Request[_], flash: Flash, messages: Messages)
 
-@benefitLabel = @{ messages("BenefitInKind.label." + uriInformation.iabdValueURLDeMapper(bikForm("actives[0].uid").value.get )) }
+@benefitLabel = @{ messages("BenefitInKind.label." + uriInformation.iabdValueURLDeMapper(bikList.active.head.id )) }
 @singleBik = @{ if(bikList.active.length > 1 ) { false } else { true } }
 @gaEventBiks = @{ for (item <- 0 until bikList.active.length) { Html(messages("BenefitInKind.label." + bikList.active(item)) + " ,") } }
-@gaEventRemoveBiks = @{ if(!additive) { helper.repeat(bikForm("actives"), min=0) { activeField => Html(messages("BenefitInKind.label." + uriInformation.iabdValueURLDeMapper(activeField("uid").value.get)) + " ,") } } }
+@gaEventRemoveBiks = @{ if(!additive) for (item <- 0 until bikList.active.length) { Html(messages("BenefitInKind.label." + bikList.active(item)) + " ,") } }
 
 @screenReaderExclusionOpen = @{ messages("AddBenefits.Confirm.help.reveal.link.sr.open") }
 @screenReaderExclusionClosed = @{ messages("AddBenefits.Confirm.help.reveal.link.sr.closed") }
@@ -132,17 +131,6 @@ back_link: BackLink)
 
             @helpers.form(action = controllers.registration.routes.ManageRegistrationController.removeNextYearRegisteredBenefitTypes(),
             'onsubmit -> "gaEventConfirmRemoveBenefits()", 'id -> "form-remove") {
-                <ul id="list-of-confirmation-benefits" class="list list-bullet" style="display:none">
-                    @helper.repeat(bikForm("actives"), min=0) { activeField =>
-                        @helper.inputText(activeField("uid").copy(value=Some(uriInformation.iabdValueURLDeMapper(activeField("uid").value.get))), 'style -> "display: none")
-                        @helper.inputText(activeField("pbik_seq"), 'style -> "display: none" )
-                        @helper.inputText(activeField("active"), 'style -> "display: none" )
-                        <li id='confirmation-row-confirmation-@uriInformation.iabdValueURLDeMapper(activeField("uid").value.get)'>
-                            @messages("BenefitInKind.label." + uriInformation.iabdValueURLDeMapper(activeField("uid").value.get) )
-                        </li>
-                    }
-                </ul>
-
                 <div class='form-group @if(flash.get("error")) {form-group-error}'>
                     <fieldset>
                         @if(flash.get("error")) {
@@ -152,28 +140,28 @@ back_link: BackLink)
                             <p>@messages("RemoveBenefits.reason.desc")</p>
                         </legend>
                         <div class="multiple-choice" onclick="RemoveBenefitRadioButton('software')">
-                            <input id="radio-software" type="radio" name="reason.selectionValue" value="software" >
+                            <input id="radio-software" type="radio" name="selectionValue" value="software" >
                             <label for="radio-software">@messages("RemoveBenefits.reason.software")</label>
                         </div>
                         <div class="multiple-choice" onclick="RemoveBenefitRadioButton('guidance')">
-                            <input id="radio-guidance" type="radio" name="reason.selectionValue" value="guidance" >
+                            <input id="radio-guidance" type="radio" name="selectionValue" value="guidance" >
                             <label for="radio-guidance">@messages("RemoveBenefits.reason.guidance")</label>
                         </div>
                         <div class="multiple-choice" onclick="RemoveBenefitRadioButton('not-clear')">
-                            <input id="radio-not-clear" type="radio" name="reason.selectionValue" value="not-clear" >
+                            <input id="radio-not-clear" type="radio" name="selectionValue" value="not-clear" >
                             <label for="radio-not-clear">@messages("RemoveBenefits.reason.not-clear")</label>
                         </div>
                         <div class="multiple-choice" onclick="RemoveBenefitRadioButton('not-offering')">
-                            <input id="radio-not-offering" type="radio" name="reason.selectionValue" value="not-offering" >
+                            <input id="radio-not-offering" type="radio" name="selectionValue" value="not-offering" >
                             <label for="radio-not-offering">@messages("RemoveBenefits.reason.not-offering")</label>
                         </div>
                         <div class="multiple-choice" onclick="RemoveBenefitRadioButton('other')">
-                            <input id="radio-other" type="radio" name="reason.selectionValue" value="other" >
+                            <input id="radio-other" type="radio" name="selectionValue" value="other" >
                             <label for="radio-other">@messages("RemoveBenefits.reason.other")</label>
                         </div>
                         <div id="other-desc" class="other-desc panel" style="display:none">
                             <label for="radio-other-desc">@messages("RemoveBenefits.reason.other.label")</label>
-                            <textarea id="radio-other-desc" class="form-control" cols="50" rows="4" name="reason.info"></textarea>
+                            <textarea id="radio-other-desc" class="form-control" cols="50" rows="4" name="info"></textarea>
                         </div>
                     </fieldset>
                 </div>
