[DP][DDCE-896]: Even more cleaning of ManageRegistrationController and fixing tests broken by status code changes and code removal

--- a/app/views/registration/ConfirmUpdateNextTaxYear.scala.html
+++ b/app/views/registration/ConfirmUpdateNextTaxYear.scala.html
@@ -129,7 +129,7 @@ back_link: BackLink)
 
         } else {
 
-            @helpers.form(action = controllers.registration.routes.ManageRegistrationController.removeNextYearRegisteredBenefitTypes(),
+            @helpers.form(action = controllers.registration.routes.ManageRegistrationController.removeNextYearRegisteredBenefitTypes(removalBik.get.id),
             'onsubmit -> "gaEventConfirmRemoveBenefits()", 'id -> "form-remove") {
                 <div class='form-group @if(flash.get("error")) {form-group-error}'>
                     <fieldset>
